# commit

./: .gitignore  CHAT_FEATURE_STATUS.md  CI_FIXES.md  COMPLETE_OVERVIEW.md  CONFIG_FIX.md  DELETION_GUIDE.md  DOCUMENTATION_INDEX.md  DUPLICATE_FIX.md  EMPTY_CARDS_DEBUG.md  FIXES_APPLIED.md  GUID_PERSISTENCE.md  JSON_PARSING_FIX.md  LLM_IMPROVEMENTS.md  LLM_PRODUCTION_READY.md  MVP_BATCH_COMPLETE.md  PROMPT_KEYERROR_FIX.md  QUICKSTART.md  README.md  RENAME.md  RENAME_COMPLETE.md  RENAME_TO_COMMIT.md  SETUP.md  STATE_FILE_GUIDE.md  STATE_RECONCILIATION.md  TUNING_GUIDE.md  WEB_MVP_COMPLETE.md  env.example  pyproject.toml  requirements.txt  test_llm.py  test_llm_integration.py
commit/: __init__.py  anki_connect.py  apkg_builder.py  cli.py  config.py  git_utils.py  llm_client.py  note_models.py  processor.py  prompts.py  state.py  tex_parser.py
renforce/: anki_connect.py  cli.py  config.py  git_utils.py  hashing.py  llm_client.py  note_models.py  processor.py  prompts.py  security.py  state.py
tests/: __init__.py  test_git_utils.py  test_hashing.py  test_tex_parser.py
web/: ALL_PHASES_COMPLETE.md  AUTO_REFRESH_AND_DB_FIX.md  COMMIT_SELECTOR.md  COMMIT_SELECTOR_UX_IMPROVEMENTS.md  COMPLETE_FIX_SUMMARY.md  CRITICAL_FIXES.md  DATABASE_SETUP.md  DEBUG_LLM_PARSING.md  FORCE_REPROCESSING_FIX.md  FULL_SAMPLE_COMMIT.yml  JOB_QUEUE_PROGRESS.md  LLM_TOKEN_LIMIT_FIX.md  LOCAL_SETUP.md  PHASES_5_8_COMPLETE.md  PHASE_5_DEV_MODE.md  PHASE_6_STATUS_PREVIEW.md  PHASE_8_ANKICONNECT.md  PYTHON_SETUP.md  QUICK_TESTS.md  README.md  SAFE_CONFIG_AND_COMMIT_SELECTOR.md  SAMPLE_COMMIT.yml  (+12 more)
(+49 files in other folders)
